# household-battery-dispatch

./: README.md  household_battery_dispatch.ipynb  optim.py  pyproject.toml  test_optim.py  test_report.py  usage_example_household_battery_dispatch.ipynb
